--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.26.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
     "typescript": "^3.9.10",
@@ -30,8 +31,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -50,13 +50,14 @@
     "@types/styled-components": "^5.1.24",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
-    "eslint": "^8.11.0",
+    "eslint": "7.11",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^4.3.8",
     "lint-staged": "^12.3.5",
     "prettier": "^2.5.1",
-    "prettierrc": "^0.0.0-5"
+    "prettierrc": "^0.0.0-5",
+    "typescript-styled-plugin": "^0.18.2"
   },
   "husky": {
     "hooks": {
