--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
+    "toastify-js": "^1.11.2",
     "typescript": "^3.9.10",
     "web-vitals": "^0.2.4"
   },
@@ -50,6 +51,7 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.24",
+    "@types/toastify-js": "^1.11.0",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
     "eslint": "7.11",
