--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.26.1",
     "moment": "^2.29.1",
     "polished": "^4.1.4",
+    "qs": "^6.10.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.2.2",
@@ -50,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/qs": "^6.9.7",
     "@types/styled-components": "^5.1.24",
     "@types/toastify-js": "^1.11.0",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
